# p-net

./: .gitignore  CMakeLists.txt  README.md
cmake/: Linux.cmake  rt-kernel.cmake
doc/illustrations/: ACC_PLC.drawio
samples/pn_dev/: sampleapp_common.h
samples/pn_dev_counter/: GSDML-V2.33-Conf#inspire-pnet-counter-20230105.xml  app_gsdml.h
samples/pn_simple_example/: CMakeLists.txt  GSDML-V2.4-RT-Labs-P-Net-Sample-App-20230506.xml  app_data.c  app_data.h  app_gsdml.c  app_gsdml.h  client.py  commands.c  commands.h  sampleapp_common.c  sampleapp_common.h  udp_server.c  udp_server.h  utils.c  utils.h
samples/pn_simple_example/setpoint_client/: client.py  pyproject.toml  test_client.py
samples/pn_simple_example/setpoint_client/.ipynb_checkpoints/: client-checkpoint.py  test_client-checkpoint.ipynb
samples/setpoint_interface/: CMakeLists.txt  GSDML-V2.4-RT-Labs-P-Net-Sample-App-20230506.xml  GSDML-V2.4-RT-Labs-P-Net-Sample-App-20230524.xml  GSDML-V2.4-inspire-ag-setpoint-interface-20230718.xml  GSDML-V2.4-inspire-ag-setpoint-interface-20230828.xml  app_data.c  app_data.h  app_gsdml.c  app_gsdml.h  commands.c  commands.h  sampleapp_common.c  sampleapp_common.h  sampleapp_main.c  udp_server.c  utils.c  utils.h
samples/setpoint_interface/gsdml_creator/: GSDML-V2.4-RT-Labs-unit-test-20230524.xml  README.md  conda.yml  gsdml.py  gsdml_gpt.py  playground.py  pyproject.toml  test_gsdml.py  test_gsdml_gpt.py
samples/setpoint_interface/setpoint_client/: C11_15_degree_turn_back_and_forth_speed_35_percent_smooth.csv  README.md  client.py  conda.yml  pyproject.toml  test_client.py
src/device/: pnet_api.c
src/ports/linux/: set_network_parameters
test/: CMakeLists.txt  test_commands.cpp
